--- a/assets/css/main_style.css
+++ b/assets/css/main_style.css
@@ -95,6 +95,7 @@ h1, h2, h3, h4, h5, h6, p {
 	display: inline-block;
 	color: #000000;
 	height: inherit;
+	width: 20vw;
 }
 
 .img-wrapper-inline {
