--- a/assets/css/main_style.css
+++ b/assets/css/main_style.css
@@ -96,6 +96,8 @@ h1, h2, h3, h4, h5, h6, p {
 	color: #000000;
 	height: inherit;
 	width: 20vw;
+	padding: 0;
+	margin: 0;
 }
 
 .img-wrapper-inline {
